traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:11: error: '(' expected but identifier found.
  if getDirection() == Direction.EST {
     ^Snake:15: error: '(' expected but identifier found.
  if getDirection() == Direction.OUEST {
     ^