traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  while(!posFinale()) {
    avance()
  }
  
}

def posFinale() {
  if(!estFaceMur) return(false)
  if getDirection() == Direction.EST {
    gauche()
    if(estFaceMur) return(true)}
  
  if getDirection() == Direction.OUEST {
    droite()
    if(estFaceMur) return(true)}
	return(false)
}